# simulation-engine

./: .clang-format  .gitignore  CMakeLists.txt
.ccls-cache/@@home@alexmatthewcandelario@Projects@simulation_engine/: @home@alexmatthewcandelario@.local@share@nvim@lsp_servers@ccls@clang-resource@include@__stddef_max_align_t.h.blob  @home@alexmatthewcandelario@.local@share@nvim@lsp_servers@ccls@clang-resource@include@stdarg.h.blob  @home@alexmatthewcandelario@.local@share@nvim@lsp_servers@ccls@clang-resource@include@stddef.h.blob  @home@alexmatthewcandelario@.local@share@nvim@lsp_servers@ccls@clang-resource@include@stdint.h.blob  @usr@include@GL@gl.h.blob  @usr@include@GL@glext.h.blob  @usr@include@KHR@khrplatform.h.blob  @usr@include@alloca.h.blob  @usr@include@asm-generic@errno-base.h.blob  @usr@include@asm-generic@errno.h.blob  @usr@include@c++@10@backward@binders.h.blob  @usr@include@c++@10@bits@alloc_traits.h.blob  @usr@include@c++@10@bits@allocator.h.blob  @usr@include@c++@10@bits@basic_ios.h.blob  @usr@include@c++@10@bits@basic_ios.tcc.blob  @usr@include@c++@10@bits@basic_string.h.blob  @usr@include@c++@10@bits@basic_string.tcc.blob  @usr@include@c++@10@bits@char_traits.h.blob  @usr@include@c++@10@bits@charconv.h.blob  @usr@include@c++@10@bits@concept_check.h.blob  @usr@include@c++@10@bits@cpp_type_traits.h.blob  (+162 more)
include/: Application.hpp  Device.hpp  Pipeline.hpp  SwapChain.hpp  Window.hpp
scripts/: compile_shader.sh
shaders/: simple_shader.frag  simple_shader.vert
src/: Application.cpp  Device.cpp  Pipeline.cpp  SwapChain.cpp  Window.cpp  main.cpp
(+10 files in other folders)
